test/tasty/neg/src-2/TestIntent.check
TestIntent_fail.scala:7: error: Unsupported Scala 3 inline method here
    in("should be 6")(toEqual(expect(3 + 3))(6))
                                    ^
TestIntent_fail.scala:7: error: Unsupported Scala 3 inline method here
    in("should be 6")(toEqual(expect(3 + 3))(6))
                     ^
TestIntent_fail.scala:6: error: Unsupported Scala 3 inline method here
  apply("3 + 3") {
                 ^
3 errors
